Payment receipt schema update
