# data/model/base/base_document.go
@@ -45,6 +45,7 @@ type BaseDocument struct {
 	ShippingTerms               NullShippingTerms  `boil:"shipping_terms" json:"shipping_terms,omitempty" toml:"shipping_terms" yaml:"shipping_terms,omitempty"`
 	ShippingMethod              NullShippingMethod `boil:"shipping_method" json:"shipping_method,omitempty" toml:"shipping_method" yaml:"shipping_method,omitempty"`
 	ShippingDate                null.Time          `boil:"shipping_date" json:"shipping_date,omitempty" toml:"shipping_date" yaml:"shipping_date,omitempty"`
+	PaymentAmount               types.NullDecimal  `boil:"payment_amount" json:"payment_amount,omitempty" toml:"payment_amount" yaml:"payment_amount,omitempty"`
 	PaymentTerms                NullPaymentTerms   `boil:"payment_terms" json:"payment_terms,omitempty" toml:"payment_terms" yaml:"payment_terms,omitempty"`
 	PaymentInstructions         null.String        `boil:"payment_instructions" json:"payment_instructions,omitempty" toml:"payment_instructions" yaml:"payment_instructions,omitempty"`
 	PaymentStatus               NullPaymentStatus  `boil:"payment_status" json:"payment_status,omitempty" toml:"payment_status" yaml:"payment_status,omitempty"`
@@ -76,6 +77,7 @@ var BaseDocumentColumns = struct {
 	ShippingTerms               string
 	ShippingMethod              string
 	ShippingDate                string
+	PaymentAmount               string
 	PaymentTerms                string
 	PaymentInstructions         string
 	PaymentStatus               string
@@ -102,6 +104,7 @@ var BaseDocumentColumns = struct {
 	ShippingTerms:               "shipping_terms",
 	ShippingMethod:              "shipping_method",
 	ShippingDate:                "shipping_date",
+	PaymentAmount:               "payment_amount",
 	PaymentTerms:                "payment_terms",
 	PaymentInstructions:         "payment_instructions",
 	PaymentStatus:               "payment_status",
@@ -130,6 +133,7 @@ var BaseDocumentTableColumns = struct {
 	ShippingTerms               string
 	ShippingMethod              string
 	ShippingDate                string
+	PaymentAmount               string
 	PaymentTerms                string
 	PaymentInstructions         string
 	PaymentStatus               string
@@ -156,6 +160,7 @@ var BaseDocumentTableColumns = struct {
 	ShippingTerms:               "base_document.shipping_terms",
 	ShippingMethod:              "base_document.shipping_method",
 	ShippingDate:                "base_document.shipping_date",
+	PaymentAmount:               "base_document.payment_amount",
 	PaymentTerms:                "base_document.payment_terms",
 	PaymentInstructions:         "base_document.payment_instructions",
 	PaymentStatus:               "base_document.payment_status",
@@ -488,6 +493,7 @@ var BaseDocumentWhere = struct {
 	ShippingTerms               whereHelperNullShippingTerms
 	ShippingMethod              whereHelperNullShippingMethod
 	ShippingDate                whereHelpernull_Time
+	PaymentAmount               whereHelpertypes_NullDecimal
 	PaymentTerms                whereHelperNullPaymentTerms
 	PaymentInstructions         whereHelpernull_String
 	PaymentStatus               whereHelperNullPaymentStatus
@@ -514,6 +520,7 @@ var BaseDocumentWhere = struct {
 	ShippingTerms:               whereHelperNullShippingTerms{field: "\"base\".\"base_document\".\"shipping_terms\""},
 	ShippingMethod:              whereHelperNullShippingMethod{field: "\"base\".\"base_document\".\"shipping_method\""},
 	ShippingDate:                whereHelpernull_Time{field: "\"base\".\"base_document\".\"shipping_date\""},
+	PaymentAmount:               whereHelpertypes_NullDecimal{field: "\"base\".\"base_document\".\"payment_amount\""},
 	PaymentTerms:                whereHelperNullPaymentTerms{field: "\"base\".\"base_document\".\"payment_terms\""},
 	PaymentInstructions:         whereHelpernull_String{field: "\"base\".\"base_document\".\"payment_instructions\""},
 	PaymentStatus:               whereHelperNullPaymentStatus{field: "\"base\".\"base_document\".\"payment_status\""},
@@ -549,9 +556,9 @@ func (r *baseDocumentR) GetBaseDocumentItems() BaseDocumentItemSlice {
 type baseDocumentL struct{}
 
 var (
-	baseDocumentAllColumns            = []string{"id", "created_at", "updated_at", "deleted_at", "issue_date", "gross_amount_gen", "discount_amount_gen", "discount_rate_gen", "additional_discount_amount", "additional_discount_rate_gen", "gross_amount_after_discount_gen", "tax_amount_gen", "tax_rate_gen", "shipping_fees_gen", "other_fees", "custom_adjustment_amount", "net_amount_gen", "shipping_terms", "shipping_method", "shipping_date", "payment_terms", "payment_instructions", "payment_status", "remarks", "terms_and_conditions"}
+	baseDocumentAllColumns            = []string{"id", "created_at", "updated_at", "deleted_at", "issue_date", "gross_amount_gen", "discount_amount_gen", "discount_rate_gen", "additional_discount_amount", "additional_discount_rate_gen", "gross_amount_after_discount_gen", "tax_amount_gen", "tax_rate_gen", "shipping_fees_gen", "other_fees", "custom_adjustment_amount", "net_amount_gen", "shipping_terms", "shipping_method", "shipping_date", "payment_amount", "payment_terms", "payment_instructions", "payment_status", "remarks", "terms_and_conditions"}
 	baseDocumentColumnsWithoutDefault = []string{"id", "created_at", "updated_at"}
-	baseDocumentColumnsWithDefault    = []string{"deleted_at", "issue_date", "gross_amount_gen", "discount_amount_gen", "discount_rate_gen", "additional_discount_amount", "additional_discount_rate_gen", "gross_amount_after_discount_gen", "tax_amount_gen", "tax_rate_gen", "shipping_fees_gen", "other_fees", "custom_adjustment_amount", "net_amount_gen", "shipping_terms", "shipping_method", "shipping_date", "payment_terms", "payment_instructions", "payment_status", "remarks", "terms_and_conditions"}
+	baseDocumentColumnsWithDefault    = []string{"deleted_at", "issue_date", "gross_amount_gen", "discount_amount_gen", "discount_rate_gen", "additional_discount_amount", "additional_discount_rate_gen", "gross_amount_after_discount_gen", "tax_amount_gen", "tax_rate_gen", "shipping_fees_gen", "other_fees", "custom_adjustment_amount", "net_amount_gen", "shipping_terms", "shipping_method", "shipping_date", "payment_amount", "payment_terms", "payment_instructions", "payment_status", "remarks", "terms_and_conditions"}
 	baseDocumentPrimaryKeyColumns     = []string{"id"}
 	baseDocumentGeneratedColumns      = []string{"discount_rate_gen", "additional_discount_rate_gen", "gross_amount_after_discount_gen", "tax_rate_gen", "net_amount_gen"}
 )
